--- a/week02/firstEjsProject/pageTemplates/result.ejs
+++ b/week02/firstEjsProject/pageTemplates/result.ejs
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
 
-    <title>Document</title>
+    <title><%= title %></title>
   </head>
-  <body></body>
+  <body>
+    <h1><%= header %></h1>
+    <p>Firstname : <%= person.firstname %></p>
+    <p>Lastname : <%= person.lastname %></p>
+    <a href="/">Menu</a>
+  </body>
 </html>
