--- a/week02/firstEjsProject/pageTemplates/form.ejs
+++ b/week02/firstEjsProject/pageTemplates/form.ejs
@@ -14,6 +14,7 @@
       <p>
         <label>Lastname: <input type="text" name="lastname" /></label>
       </p>
+      <button type="submit">Submit</button>
     </form>
     <a href="/">Menu</a>
   </body>
