parametrizing the input and the displaying fields

--- a/week02/firstEjsProject/pageTemplates/formOriginal.ejs
+++ b/week02/firstEjsProject/pageTemplates/formOriginal.ejs
@@ -12,9 +12,7 @@
         <label>Firstname: <input type="text" name="firstname" /></label>
       </p>
       <p>
-        <label
-          ><%= name %> <input type="<%= passType %>" name="lastname"
-        /></label>
+        <label>Lastname: <input type="text" name="lastname" /></label>
       </p>
       <button type="submit">Submit</button>
     </form>
