--- a/week02/firstEjsProject/pageTemplates/result.ejs
+++ b/week02/firstEjsProject/pageTemplates/result.ejs
@@ -8,7 +8,7 @@
   <body>
     <h1><%= header %></h1>
     <p>Firstname : <%= person.firstname %></p>
-    <p>Lastname : <%= person.lastname %></p>
+    <p><%= name %> : <%= person.lastname %></p>
     <a href="/">Menu</a>
   </body>
 </html>
