--- a/week03/employer-server/pageviews/allPersons.ejs
+++ b/week03/employer-server/pageviews/allPersons.ejs
@@ -27,6 +27,7 @@
           <% }) %>
         </tbody>
       </table>
+      <a href="/"><button>Menu</button></a>
     </main>
   </body>
 </html>
