--- a/week03/employer-server/public/styles/styles.css
+++ b/week03/employer-server/public/styles/styles.css
@@ -1,6 +1,41 @@
-h1 {
-  color: red;
+main, form{
+  display: grid;
+  align-items: center;
+  justify-items: center;
 }
-h2 {
+
+input[readonly]{
+  background-color: lightgray;
+}
+
+table{
+  border-collapse: collapse;
+  margin-bottom: 1em;
+}
+
+table, th,td{
+  border: solid black 1px;
+  padding: 0.5em;
+}
+thead{
+  background-color: lightgray;
+}
+button{
+  font-family: sans-serif;
+  width: 13em;
+  height: 2em;
+  cursor: pointer;
+  margin: 5px 0;
+}
+
+p.info{
+  border: solid lightsteelblue 2px;
+  padding: 1em;
+}
+p.error{
+  border: dashed red 2px;
+  padding: 1em;
+}
+h1.error{
   color: red;
 }
